[package]
name = "frostlab"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5"
anyhow = "1"

[dependencies]
anyhow = "1.0.100"
frost-core = "2.2.0"
frost-secp256k1-evm = "2.2.0"
k256 = "0.13.4"
rand_core = "0.9.3"
sha2 = "0.10.9"
thiserror = "2.0.17"
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"

[[bench]]
name = "ddh-dvrf_frost_bench"
harness = false